<resources>
    <string name="app_name">HomePage</string>
    <string name="CalculateCalMenu">Calculate Calori</string>
    <string name="calmenu">Calculate Calorie</string>
    <string name="myrecordsbtn_menu">My Records</string>
    <string name="Appbar">Daily Calorie Calculator</string>
    <string name="Appbar1">" Calorie Calculator"</string>
    <string name="CalTitle">Calorie Calculator</string>
    <string name="Calgender">Gender</string>
    <string name="RadioMale">Male</string>
    <string name="RadioFemale">Female</string>
    <string name="CalHeight">Height</string>
    <string name="CalWeight">Weight</string>
    <string name="CalAge">Age</string>
    <string name="CalActivity">Activity</string>
    <string name="CalculateBtn">Calculate</string>
    <string name="Result1">Total Daily Calarie Intake : 3000 Calarie</string>
    <string name="Result2">Protein Intake : 120 gms</string>
    <string name="Result3">Cabohyrate Intake : 300 gms</string>
    <string name="Result4">Fat Intake : 50 gms</string>
    <string name="SaveRecordsBtn">Save Record</string>
    <string name="CamcelRecordsBtn">Cancel</string>
    <string name="CalDate">2022/03/16</string>
    <string name="UpdateBtn">Update</string>
    <string name="DeleteBtn">Delete</string>
    <string name="update_cal_title">Update Calorie Records</string>
    <string name="update_height_value">5 feet 8 inches</string>
    <string name="update_weight_value">52 kg</string>
    <string name="update_age_value">23</string>
    <string name="updatencal_btn"><![CDATA[Calculate & Update]]></string>
    <string name="OkUpdate">Ok</string>
    <string name="UpdateSuccessful">Record is succesfully updated</string>
    <string name="DeleteAlert">Record is succesfully deleted</string>
    <string name="Healthify">Healthify</string>
    <string name="HomeBMI">BMI Calculator</string>
    <string name="HomeCalorie">Daily Calorie Calculator</string>
    <string name="HomeBodyFat">Body Fat Calculator</string>
    <string name="HomeBodyShape">Body Shape Calculator</string>
    <string name="title_activity_side_navigation">Side_navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>